# claude-temporal-plugin

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md
.claude-plugin/: marketplace.json  plugin.json
evals/: README.md  baseline.yaml  pyproject.toml  results.yaml
evals/datasets/temporal-python/advanced-multi-step-workflow-logging/: instruction.md
evals/datasets/temporal-python/advanced-order-queue-workflow/: instruction.md
evals/datasets/temporal-python/advanced-user-registration-workflow/: instruction.md  task.toml
evals/datasets/temporal-python/footgun-custom-class-trap/: instruction.md
evals/datasets/temporal-python/footgun-dataframe-trap/: instruction.md
evals/datasets/temporal-python/footgun-file-handle-trap/: instruction.md
evals/datasets/temporal-python/footgun-lambda-trap/: instruction.md  task.toml
evals/datasets/temporal-python/footgun-path-trap/: instruction.md
evals/datasets/temporal-python/footgun-random-number-trap/: instruction.md
evals/datasets/temporal-python/footgun-random-selection-trap/: instruction.md
evals/datasets/temporal-python/footgun-set-return-trap/: instruction.md
evals/scripts/: run-comparison.sh
evals/templates/temporal-python/: instruction.md  task.toml
evals/templates/temporal-questions/: instruction.md  task.toml
evals/templates/temporal-typescript/: instruction.md  task.toml
evals/temporal_evals/: dashboard.py  models.py  run_evals.py  worker.py
evals/temporal_evals/activities/: __init__.py  harbor.py  record.py
evals/temporal_evals/workflows/: __init__.py  eval_workflow.py
(+157 files in other folders)
